<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/projet1"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#BAFFFFFF"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/debutbienvenue"
                android:textColor="#363A43"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/debutconsigne"
                android:textColor="#7A8089"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_name1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/TV_name"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="#000409"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,TextFields"
                    android:inputType="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/debutjeu" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>