<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/back"
    android:gravity="center"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/projet1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:text="@string/question1"
        android:textAlignment="center"
        android:textColor="#02266C"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="42dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center">

        <Button
            android:id="@+id/bt1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:lineSpacingExtra="16sp"
            android:text="@string/answer1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0B0101"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:cornerRadius="8dp"
            app:iconTint="#F6F2F2"
            app:rippleColor="#F1E8E8" />

        <Button
            android:id="@+id/bt2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:lineSpacingExtra="16sp"
            android:text="@string/answer2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0B0101"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:cornerRadius="8dp"
            app:iconTint="#F6F2F2"
            app:rippleColor="#F1E8E8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/bt3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:lineSpacingExtra="16sp"
            android:text="@string/answer3"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0B0101"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:cornerRadius="8dp"
            app:iconTint="#F6F2F2"
            app:rippleColor="#F1E8E8" />

        <Button
            android:id="@+id/bt4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:lineSpacingExtra="16sp"
            android:text="@string/answer4"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0B0101"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:cornerRadius="8dp"
            app:iconTint="#F6F2F2"
            app:rippleColor="#F1E8E8" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TV_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_suivant1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Question Suivante"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>